add language status
